<resources>
    <string name="app_name">Slang Travel</string>
    <string name="wow_so_many_trains">Wow… So many trains :)</string>
    <string name="welcome_title">Wecome!</string>
    <string name="contact_us">Have some feedback?</string>
    <string name="description_text">Welcome to Slang\'s Voice Augmented eXperience for Search demo!\n\nThis app is to demo the voice capabilities of Slang and how app developers can build a smart context aware eXperience for their customers.\n\nWe hope you like it. If yes, let us know. If you don\'t, tell us but politely 😉\n\nThe Slang Team</string>
    <string name="do_not_show">Don\'t show this again</string>
    <string name="email_id"><u>42@slanglabs.in</u></string>
    <string name="email_description_text">Loved it? Something broke? (We hope not)\n\nEnjoyed talking to Slang and can\’t wait to get more?\n\nIf you\’ve got thoughts, we\’re here to listen. Hit us up 🙂</string>
    <string name="voice_powered_train_search_demo">Voice Powered Train Search Demo</string>
    <string name="showing_trains_from">Showing trains from</string>
    <string name="mumbai_to_delhi">Mumbai to Delhi</string>
    <string name="your_search_query_has_been_updated">Your search query has been updated.</string>
    <string name="you_can_try_saying">You can try saying</string>
    <string name="quot_show_trains_leaving_in_the_morning_quot">\"Show trains leaving in the morning\"</string>
    <string name="quot_show_trains_between_9_am_to_1_pm_quot">\"Show trains between 9 AM to 1 PM\"</string>
    <string name="quot_sort_by_cheapest_quot">\"Sort by cheapest\"</string>
    <string name="hi_hint1">आप यह कहते हुए कोशिश कर सकते हैं</string>
    <string name="hi_hint2">\"सुबह की गाड़ियों को दिखाओ\"</string>
    <string name="hi_hint3">\"सुबह 9 बजे से दोपहर 1 बजे के बीच ट्रेन दिखाएं\"</string>
    <string name="hi_hint4">\"सबसे सस्ता द्वारा छाँटें\"</string>
    <string name="for_12_05_2019">for 12-05-2019</string>
    <string name="txt_contact_us">Contact Us</string>
    <string name="quot_show_trains_from_bangalore_to_chennai_quot">\"Show trains from Bangalore to Chennai\"</string>
    <string name="search">Search</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="quot_trains_leaving_from_delhi_to_mumbai_on_12th_july_quot">\"Trains leaving from Delhi to Mumbai on 12th July\"</string>
    <string name="quot_can_you_show_me_trains_from_chennai_on_1st_august_quot">\"Can you show me trains from Chennai on 1st August?\"</string>
    <string name="hi_help_text">आप यह कहते हुए कोशिश कर सकते हैं</string>
    <string name="hi_bangalore_to_chennai">\"बैंगलोर से चेन्नई तक ट्रेने दिखाएँ\"</string>
    <string name="hi_help_text2">\"12 जुलाई को दिल्ली से मुंबई जाने वाली ट्रेनें दिखाएं\"</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="journey_date">Journey Date</string>
    <string name="hi_help_text3">क्या आप मुझे 1 अगस्त को चेन्नई से ट्रेनदिखा सकते हैं</string>
    <string name="enter_source">Enter Source</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
</resources>
